--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -48,7 +48,7 @@
   padding: 1rem 0 0.8rem 0;
 }
 
-.bottom-row a {
+.bottom-row p {
   text-decoration: none;
   color: #fafafa;
   padding-bottom: 0.4rem;
